Bug 1881855 - The 'inset' used during text-wrap:balance reflows should only be applied to the root span of each line. r=layout-reviewers,emilio

This was just a silly trivial error in the original implementation. We shouldn't apply
the inset value to nested spans within the line, only to the root span.

Differential Revision: https://phabricator.services.mozilla.com/D203786